--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <a class="apresentacao__links__ancoras" href="https://github.com/guilhermeonrails">GitHub</a>
                 </div>
         </section>
-            <img src="imagem.png" alt="Foto da Joana Santos programando">
+            <img src="Imagem.png" alt="Foto da Joana Santos programando">
     </main>
     <footer></footer>
 </body>
